project/bin/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    CONSTANT_RESOLUTION
    POWER_EQUALS
    PLUS_AT
    undef
    POWER
    LOGICAL_AND_EQUALS
    STRING2
    WORD_OR
    rescue
    COMPLEMENT
    not
    MAP
    yield
    SYMBOL_NOT
    module
    AT_THE_RATE
    ELEMENT_REFERENCE
    BEGIN
    retry
    COLON
    END
    REGEXP
    super
    CLOSE_FLOWER
    ensure
    or
    DOUBLE_QUOTE
    OPEN_FLOWER
    ELEMENT_SET
    next
    redo
    WORD_AND
    QUESTION_MARK
    HEREDOC
    BANG_TILDE
    and
    defined
    MINUS_AT
    WORD_NOT
    LOGICAL_OR_EQUALS
    begin
    unless
    DOLLAR
    FLOAT
    alias
    TRIPLE_EQUALS

Grammar

Rule 0     S' -> compstmt
Rule 1     compstmt -> stmt1 multcompstmt
Rule 2     multcompstmt -> compnewline stmt1 multcompstmt
Rule 3     multcompstmt -> newline
Rule 4     stmt1 -> stmt
Rule 5     stmt -> keydef argdecl newline multstmt keyend
Rule 6     stmt -> puts OPEN_BRACKET STRING CLOSE_BRACKET
Rule 7     stmt -> print OPEN_BRACKET primary CLOSE_BRACKET
Rule 8     stmt -> gets OPEN_BRACKET IDENTIFIER CLOSE_BRACKET
Rule 9     stmt -> keyclass IDENTIFIER newline multstmt keyend
Rule 10    stmt -> break
Rule 11    stmt -> expr
Rule 12    keyclass -> class
Rule 13    keydef -> def IDENTIFIER
Rule 14    keyend -> end
Rule 15    multstmt -> stmt compnewline multstmt
Rule 16    multstmt -> newline
Rule 17    multstmt -> stmt
Rule 18    expr -> if expr1 pthen M_1 multstmt else newline M_1 multstmt end M_1
Rule 19    expr -> if expr1 pthen M_1 multstmt M_1 multelsif end M_1
Rule 20    expr -> if expr1 pthen M_1 multstmt end M_1
Rule 21    expr -> while M_1 expr1 pdo M_1 multstmt end M_1
Rule 22    expr -> until M_1 expr1 pdo M_1 multstmt end M_1
Rule 23    expr -> case expr1 newline multcase end M_1
Rule 24    expr -> for M_1 mlhs in expr1 pdo M_1 multstmt end M_1
Rule 25    expr -> expr1
Rule 26    M_1 -> empty
Rule 27    expr1 -> return term2
Rule 28    expr1 -> return
Rule 29    expr1 -> expr2
Rule 30    expr2 -> arg
Rule 31    expr2 -> call
Rule 32    call -> function
Rule 33    function -> IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
Rule 34    function -> IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
Rule 35    arg -> term0
Rule 36    term0 -> mlhs EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
Rule 37    term0 -> mlhs EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
Rule 38    term0 -> mlhs EQUALS IDENTIFIER DOT new OPEN_BRACKET CLOSE_BRACKET
Rule 39    term0 -> term1
Rule 40    term1 -> mlhs EQUALS mrhs
Rule 41    term1 -> mlhs opasgn mrhs
Rule 42    term1 -> term2
Rule 43    term2 -> term3 INCL_RANGE term3
Rule 44    term2 -> term3 EXCL_RANGE term3
Rule 45    term2 -> term3
Rule 46    term3 -> term3 LOGICAL_OR term4
Rule 47    term3 -> term3 LOGICAL_AND term4
Rule 48    term3 -> term4
Rule 49    term4 -> term5 DOUBLE_EQUALS term5
Rule 50    term4 -> term5 NOT_EQUALS term5
Rule 51    term4 -> term5 EQUAL_TILDE term5
Rule 52    term4 -> term5 COMPARISON term5
Rule 53    term4 -> term5
Rule 54    term5 -> term5 LESS term6
Rule 55    term5 -> term5 LESS_EQUALS term6
Rule 56    term5 -> term5 GREATER term6
Rule 57    term5 -> term5 GREATER_EQUALS term6
Rule 58    term5 -> term6
Rule 59    term6 -> term6 BIT_XOR term7
Rule 60    term6 -> term6 BIT_OR term7
Rule 61    term6 -> term7
Rule 62    term7 -> term7 BIT_AND term8
Rule 63    term7 -> term8
Rule 64    term8 -> term8 LEFT_SHIFT term9
Rule 65    term8 -> term8 RIGHT_SHIFT term9
Rule 66    term8 -> term9
Rule 67    term9 -> term9 PLUS term10
Rule 68    term9 -> term9 MINUS term10
Rule 69    term9 -> term10
Rule 70    term10 -> term10 MULTIPLY term11
Rule 71    term10 -> term10 DIVIDE term11
Rule 72    term10 -> term10 MODULO term11
Rule 73    term10 -> term11
Rule 74    term11 -> MINUS term11
Rule 75    term11 -> term12
Rule 76    term12 -> PLUS term12
Rule 77    term12 -> term13
Rule 78    term13 -> primary
Rule 79    primary -> OPEN_BRACKET expr2 CLOSE_BRACKET
Rule 80    primary -> arrayd
Rule 81    primary -> arraya
Rule 82    primary -> classvar
Rule 83    primary -> literal
Rule 84    primary -> varname
Rule 85    classvar -> IDENTIFIER DOT IDENTIFIER
Rule 86    arrayd -> Array OPEN_BRACKET array_size CLOSE_BRACKET
Rule 87    array_size -> term2 COMMA array_size
Rule 88    array_size -> term2
Rule 89    arrayal -> variable OPEN_SQUARE array_args CLOSE_SQUARE
Rule 90    arraya -> variable OPEN_SQUARE array_args CLOSE_SQUARE
Rule 91    array_args -> primary COMMA array_args
Rule 92    array_args -> primary
Rule 93    multcase -> when whenargs pthen M_1 multstmt M_1 multcase
Rule 94    multcase -> when whenargs pthen M_1 multstmt M_1
Rule 95    multelsif -> elsif expr pthen M_1 multstmt M_1 multelsif M_1
Rule 96    multelsif -> else newline multstmt
Rule 97    multelsif -> empty
Rule 98    literal -> NUMBER
Rule 99    literal -> true
Rule 100   literal -> false
Rule 101   whenargs -> arg
Rule 102   mlhs -> mlhsitem
Rule 103   mlhsitem -> IDENTIFIER
Rule 104   mlhsitem -> arrayal
Rule 105   mlhsitem -> classvar
Rule 106   mrhs -> term2
Rule 107   callargs -> callarglist
Rule 108   callarglist -> term2 callmultarglist
Rule 109   callarglist -> empty
Rule 110   callmultarglist -> COMMA term2 callmultarglist
Rule 111   callmultarglist -> empty
Rule 112   argdecl -> OPEN_BRACKET arglist CLOSE_BRACKET
Rule 113   arglist -> IDENTIFIER multarglist
Rule 114   arglist -> empty
Rule 115   multarglist -> COMMA IDENTIFIER multarglist
Rule 116   multarglist -> empty
Rule 117   variable -> varname
Rule 118   variable -> nil
Rule 119   variable -> self
Rule 120   pthen -> newline
Rule 121   pthen -> then
Rule 122   pthen -> newline then
Rule 123   pdo -> newline
Rule 124   pdo -> do newline
Rule 125   pdo -> newline do
Rule 126   opasgn -> MODULO_EQUALS
Rule 127   opasgn -> DIVIDE_EQUALS
Rule 128   opasgn -> MINUS_EQUALS
Rule 129   opasgn -> PLUS_EQUALS
Rule 130   opasgn -> OR_EQUALS
Rule 131   opasgn -> AND_EQUALS
Rule 132   opasgn -> XOR_EQUALS
Rule 133   opasgn -> RIGHT_SHIFT_EQUALS
Rule 134   opasgn -> LEFT_SHIFT_EQUALS
Rule 135   opasgn -> MULTIPLY_EQUALS
Rule 136   varname -> GLOBAL
Rule 137   varname -> IDENTIFIER
Rule 138   compnewline -> SEMI_COLON
Rule 139   compnewline -> NEWLINE
Rule 140   newline -> compnewline
Rule 141   newline -> empty
Rule 142   empty -> <empty>

Terminals, with rules where they appear

AND_EQUALS           : 131
AT_THE_RATE          : 
Array                : 86
BANG_TILDE           : 
BEGIN                : 
BIT_AND              : 62
BIT_OR               : 60
BIT_XOR              : 59
CLOSE_BRACKET        : 6 7 8 33 34 36 37 38 79 86 112
CLOSE_FLOWER         : 
CLOSE_SQUARE         : 89 90
COLON                : 
COMMA                : 87 91 110 115
COMPARISON           : 52
COMPLEMENT           : 
CONSTANT_RESOLUTION  : 
DIVIDE               : 71
DIVIDE_EQUALS        : 127
DOLLAR               : 
DOT                  : 38 85
DOUBLE_EQUALS        : 49
DOUBLE_QUOTE         : 
ELEMENT_REFERENCE    : 
ELEMENT_SET          : 
END                  : 
EQUALS               : 36 37 38 40
EQUAL_TILDE          : 51
EXCL_RANGE           : 44
FLOAT                : 
GLOBAL               : 136
GREATER              : 56
GREATER_EQUALS       : 57
HEREDOC              : 
IDENTIFIER           : 8 9 13 33 34 36 37 38 85 85 103 113 115 137
INCL_RANGE           : 43
LEFT_SHIFT           : 64
LEFT_SHIFT_EQUALS    : 134
LESS                 : 54
LESS_EQUALS          : 55
LOGICAL_AND          : 47
LOGICAL_AND_EQUALS   : 
LOGICAL_OR           : 46
LOGICAL_OR_EQUALS    : 
MAP                  : 
MINUS                : 68 74
MINUS_AT             : 
MINUS_EQUALS         : 128
MODULO               : 72
MODULO_EQUALS        : 126
MULTIPLY             : 70
MULTIPLY_EQUALS      : 135
NEWLINE              : 139
NOT_EQUALS           : 50
NUMBER               : 98
OPEN_BRACKET         : 6 7 8 33 34 36 37 38 79 86 112
OPEN_FLOWER          : 
OPEN_SQUARE          : 89 90
OR_EQUALS            : 130
PLUS                 : 67 76
PLUS_AT              : 
PLUS_EQUALS          : 129
POWER                : 
POWER_EQUALS         : 
QUESTION_MARK        : 
REGEXP               : 
RIGHT_SHIFT          : 65
RIGHT_SHIFT_EQUALS   : 133
SEMI_COLON           : 138
STRING               : 6
STRING2              : 
SYMBOL_NOT           : 
TRIPLE_EQUALS        : 
WORD_AND             : 
WORD_NOT             : 
WORD_OR              : 
XOR_EQUALS           : 132
alias                : 
and                  : 
begin                : 
break                : 10
case                 : 23
class                : 12
def                  : 13
defined              : 
do                   : 124 125
else                 : 18 96
elsif                : 95
end                  : 14 18 19 20 21 22 23 24
ensure               : 
error                : 
false                : 100
for                  : 24
gets                 : 8
if                   : 18 19 20
in                   : 24
module               : 
new                  : 38
next                 : 
nil                  : 118
not                  : 
or                   : 
print                : 7
puts                 : 6
redo                 : 
rescue               : 
retry                : 
return               : 27 28
self                 : 119
super                : 
then                 : 121 122
true                 : 99
undef                : 
unless               : 
until                : 22
when                 : 93 94
while                : 21
yield                : 

Nonterminals, with rules where they appear

M_1                  : 18 18 18 19 19 19 20 20 21 21 21 22 22 22 23 24 24 24 93 93 94 94 95 95 95
arg                  : 30 101
argdecl              : 5
arglist              : 112
array_args           : 89 90 91
array_size           : 86 87
arraya               : 81
arrayal              : 104
arrayd               : 80
call                 : 31
callarglist          : 107
callargs             : 33 37
callmultarglist      : 108 110
classvar             : 82 105
compnewline          : 2 15 140
compstmt             : 0
empty                : 26 97 109 111 114 116 141
expr                 : 11 95
expr1                : 18 19 20 21 22 23 24 25
expr2                : 29 79
function             : 32
keyclass             : 9
keydef               : 5
keyend               : 5 9
literal              : 83
mlhs                 : 24 36 37 38 40 41
mlhsitem             : 102
mrhs                 : 40 41
multarglist          : 113 115
multcase             : 23 93
multcompstmt         : 1 2
multelsif            : 19 95
multstmt             : 5 9 15 18 18 19 20 21 22 24 93 94 95 96
newline              : 3 5 9 16 18 23 96 120 122 123 124 125
opasgn               : 41
pdo                  : 21 22 24
primary              : 7 78 91 92
pthen                : 18 19 20 93 94 95
stmt                 : 4 15 17
stmt1                : 1 2
term0                : 35
term1                : 39
term10               : 67 68 69 70 71 72
term11               : 70 71 72 73 74
term12               : 75 76
term13               : 77
term2                : 27 42 87 88 106 108 110
term3                : 43 43 44 44 45 46 47
term4                : 46 47 48
term5                : 49 49 50 50 51 51 52 52 53 54 55 56 57
term6                : 54 55 56 57 58 59 60
term7                : 59 60 61 62
term8                : 62 63 64 65
term9                : 64 65 66 67 68
variable             : 89 90
varname              : 84 117
whenargs             : 93 94

Parsing method: LALR

state 0

    (0) S' -> . compstmt
    (1) compstmt -> . stmt1 multcompstmt
    (4) stmt1 -> . stmt
    (5) stmt -> . keydef argdecl newline multstmt keyend
    (6) stmt -> . puts OPEN_BRACKET STRING CLOSE_BRACKET
    (7) stmt -> . print OPEN_BRACKET primary CLOSE_BRACKET
    (8) stmt -> . gets OPEN_BRACKET IDENTIFIER CLOSE_BRACKET
    (9) stmt -> . keyclass IDENTIFIER newline multstmt keyend
    (10) stmt -> . break
    (11) stmt -> . expr
    (13) keydef -> . def IDENTIFIER
    (12) keyclass -> . class
    (18) expr -> . if expr1 pthen M_1 multstmt else newline M_1 multstmt end M_1
    (19) expr -> . if expr1 pthen M_1 multstmt M_1 multelsif end M_1
    (20) expr -> . if expr1 pthen M_1 multstmt end M_1
    (21) expr -> . while M_1 expr1 pdo M_1 multstmt end M_1
    (22) expr -> . until M_1 expr1 pdo M_1 multstmt end M_1
    (23) expr -> . case expr1 newline multcase end M_1
    (24) expr -> . for M_1 mlhs in expr1 pdo M_1 multstmt end M_1
    (25) expr -> . expr1
    (27) expr1 -> . return term2
    (28) expr1 -> . return
    (29) expr1 -> . expr2
    (30) expr2 -> . arg
    (31) expr2 -> . call
    (35) arg -> . term0
    (32) call -> . function
    (36) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (37) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (38) term0 -> . mlhs EQUALS IDENTIFIER DOT new OPEN_BRACKET CLOSE_BRACKET
    (39) term0 -> . term1
    (33) function -> . IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (34) function -> . IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (102) mlhs -> . mlhsitem
    (40) term1 -> . mlhs EQUALS mrhs
    (41) term1 -> . mlhs opasgn mrhs
    (42) term1 -> . term2
    (103) mlhsitem -> . IDENTIFIER
    (104) mlhsitem -> . arrayal
    (105) mlhsitem -> . classvar
    (43) term2 -> . term3 INCL_RANGE term3
    (44) term2 -> . term3 EXCL_RANGE term3
    (45) term2 -> . term3
    (89) arrayal -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (85) classvar -> . IDENTIFIER DOT IDENTIFIER
    (46) term3 -> . term3 LOGICAL_OR term4
    (47) term3 -> . term3 LOGICAL_AND term4
    (48) term3 -> . term4
    (117) variable -> . varname
    (118) variable -> . nil
    (119) variable -> . self
    (49) term4 -> . term5 DOUBLE_EQUALS term5
    (50) term4 -> . term5 NOT_EQUALS term5
    (51) term4 -> . term5 EQUAL_TILDE term5
    (52) term4 -> . term5 COMPARISON term5
    (53) term4 -> . term5
    (136) varname -> . GLOBAL
    (137) varname -> . IDENTIFIER
    (54) term5 -> . term5 LESS term6
    (55) term5 -> . term5 LESS_EQUALS term6
    (56) term5 -> . term5 GREATER term6
    (57) term5 -> . term5 GREATER_EQUALS term6
    (58) term5 -> . term6
    (59) term6 -> . term6 BIT_XOR term7
    (60) term6 -> . term6 BIT_OR term7
    (61) term6 -> . term7
    (62) term7 -> . term7 BIT_AND term8
    (63) term7 -> . term8
    (64) term8 -> . term8 LEFT_SHIFT term9
    (65) term8 -> . term8 RIGHT_SHIFT term9
    (66) term8 -> . term9
    (67) term9 -> . term9 PLUS term10
    (68) term9 -> . term9 MINUS term10
    (69) term9 -> . term10
    (70) term10 -> . term10 MULTIPLY term11
    (71) term10 -> . term10 DIVIDE term11
    (72) term10 -> . term10 MODULO term11
    (73) term10 -> . term11
    (74) term11 -> . MINUS term11
    (75) term11 -> . term12
    (76) term12 -> . PLUS term12
    (77) term12 -> . term13
    (78) term13 -> . primary
    (79) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (80) primary -> . arrayd
    (81) primary -> . arraya
    (82) primary -> . classvar
    (83) primary -> . literal
    (84) primary -> . varname
    (86) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (90) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (98) literal -> . NUMBER
    (99) literal -> . true
    (100) literal -> . false

    puts            shift and go to state 33
    print           shift and go to state 24
    gets            shift and go to state 53
    break           shift and go to state 6
    def             shift and go to state 45
    class           shift and go to state 56
    if              shift and go to state 49
    while           shift and go to state 43
    until           shift and go to state 37
    case            shift and go to state 41
    for             shift and go to state 23
    return          shift and go to state 5
    IDENTIFIER      shift and go to state 36
    nil             shift and go to state 54
    self            shift and go to state 50
    GLOBAL          shift and go to state 29
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    OPEN_BRACKET    shift and go to state 3
    Array           shift and go to state 57
    NUMBER          shift and go to state 48
    true            shift and go to state 40
    false           shift and go to state 47

    term7                          shift and go to state 12
    term6                          shift and go to state 13
    term5                          shift and go to state 14
    keyclass                       shift and go to state 15
    term3                          shift and go to state 16
    term2                          shift and go to state 17
    term1                          shift and go to state 18
    term0                          shift and go to state 19
    mlhs                           shift and go to state 1
    primary                        shift and go to state 30
    term9                          shift and go to state 20
    term8                          shift and go to state 21
    term4                          shift and go to state 31
    arg                            shift and go to state 22
    arrayal                        shift and go to state 32
    expr2                          shift and go to state 51
    term13                         shift and go to state 8
    literal                        shift and go to state 34
    expr1                          shift and go to state 52
    call                           shift and go to state 35
    varname                        shift and go to state 27
    function                       shift and go to state 38
    stmt                           shift and go to state 25
    mlhsitem                       shift and go to state 39
    variable                       shift and go to state 55
    compstmt                       shift and go to state 26
    expr                           shift and go to state 42
    stmt1                          shift and go to state 28
    classvar                       shift and go to state 7
    arraya                         shift and go to state 44
    arrayd                         shift and go to state 46
    keydef                         shift and go to state 58
    term12                         shift and go to state 9
    term11                         shift and go to state 10
    term10                         shift and go to state 11

state 1

    (36) term0 -> mlhs . EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (37) term0 -> mlhs . EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (38) term0 -> mlhs . EQUALS IDENTIFIER DOT new OPEN_BRACKET CLOSE_BRACKET
    (40) term1 -> mlhs . EQUALS mrhs
    (41) term1 -> mlhs . opasgn mrhs
    (126) opasgn -> . MODULO_EQUALS
    (127) opasgn -> . DIVIDE_EQUALS
    (128) opasgn -> . MINUS_EQUALS
    (129) opasgn -> . PLUS_EQUALS
    (130) opasgn -> . OR_EQUALS
    (131) opasgn -> . AND_EQUALS
    (132) opasgn -> . XOR_EQUALS
    (133) opasgn -> . RIGHT_SHIFT_EQUALS
    (134) opasgn -> . LEFT_SHIFT_EQUALS
    (135) opasgn -> . MULTIPLY_EQUALS

    EQUALS          shift and go to state 66
    MODULO_EQUALS   shift and go to state 70
    DIVIDE_EQUALS   shift and go to state 64
    MINUS_EQUALS    shift and go to state 59
    PLUS_EQUALS     shift and go to state 60
    OR_EQUALS       shift and go to state 67
    AND_EQUALS      shift and go to state 63
    XOR_EQUALS      shift and go to state 61
    RIGHT_SHIFT_EQUALS shift and go to state 65
    LEFT_SHIFT_EQUALS shift and go to state 62
    MULTIPLY_EQUALS shift and go to state 69

    opasgn                         shift and go to state 68

state 2

    (74) term11 -> MINUS . term11
    (74) term11 -> . MINUS term11
    (75) term11 -> . term12
    (76) term12 -> . PLUS term12
    (77) term12 -> . term13
    (78) term13 -> . primary
    (79) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (80) primary -> . arrayd
    (81) primary -> . arraya
    (82) primary -> . classvar
    (83) primary -> . literal
    (84) primary -> . varname
    (86) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (90) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (85) classvar -> . IDENTIFIER DOT IDENTIFIER
    (98) literal -> . NUMBER
    (99) literal -> . true
    (100) literal -> . false
    (136) varname -> . GLOBAL
    (137) varname -> . IDENTIFIER
    (117) variable -> . varname
    (118) variable -> . nil
    (119) variable -> . self

    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    OPEN_BRACKET    shift and go to state 3
    Array           shift and go to state 57
    IDENTIFIER      shift and go to state 71
    NUMBER          shift and go to state 48
    true            shift and go to state 40
    false           shift and go to state 47
    GLOBAL          shift and go to state 29
    nil             shift and go to state 54
    self            shift and go to state 50

    varname                        shift and go to state 73
    classvar                       shift and go to state 74
    primary                        shift and go to state 30
    literal                        shift and go to state 34
    variable                       shift and go to state 72
    arraya                         shift and go to state 44
    term13                         shift and go to state 8
    term12                         shift and go to state 9
    term11                         shift and go to state 75
    arrayd                         shift and go to state 46

state 3

    (79) primary -> OPEN_BRACKET . expr2 CLOSE_BRACKET
    (30) expr2 -> . arg
    (31) expr2 -> . call
    (35) arg -> . term0
    (32) call -> . function
    (36) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (37) term0 -> . mlhs EQUALS IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (38) term0 -> . mlhs EQUALS IDENTIFIER DOT new OPEN_BRACKET CLOSE_BRACKET
    (39) term0 -> . term1
    (33) function -> . IDENTIFIER OPEN_BRACKET callargs CLOSE_BRACKET
    (34) function -> . IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
    (102) mlhs -> . mlhsitem
    (40) term1 -> . mlhs EQUALS mrhs
    (41) term1 -> . mlhs opasgn mrhs
    (42) term1 -> . term2
    (103) mlhsitem -> . IDENTIFIER
    (104) mlhsitem -> . arrayal
    (105) mlhsitem -> . classvar
    (43) term2 -> . term3 INCL_RANGE term3
    (44) term2 -> . term3 EXCL_RANGE term3
    (45) term2 -> . term3
    (89) arrayal -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (85) classvar -> . IDENTIFIER DOT IDENTIFIER
    (46) term3 -> . term3 LOGICAL_OR term4
    (47) term3 -> . term3 LOGICAL_AND term4
    (48) term3 -> . term4
    (117) variable -> . varname
    (118) variable -> . nil
    (119) variable -> . self
    (49) term4 -> . term5 DOUBLE_EQUALS term5
    (50) term4 -> . term5 NOT_EQUALS term5
    (51) term4 -> . term5 EQUAL_TILDE term5
    (52) term4 -> . term5 COMPARISON term5
    (53) term4 -> . term5
    (136) varname -> . GLOBAL
    (137) varname -> . IDENTIFIER
    (54) term5 -> . term5 LESS term6
    (55) term5 -> . term5 LESS_EQUALS term6
    (56) term5 -> . term5 GREATER term6
    (57) term5 -> . term5 GREATER_EQUALS term6
    (58) term5 -> . term6
    (59) term6 -> . term6 BIT_XOR term7
    (60) term6 -> . term6 BIT_OR term7
    (61) term6 -> . term7
    (62) term7 -> . term7 BIT_AND term8
    (63) term7 -> . term8
    (64) term8 -> . term8 LEFT_SHIFT term9
    (65) term8 -> . term8 RIGHT_SHIFT term9
    (66) term8 -> . term9
    (67) term9 -> . term9 PLUS term10
    (68) term9 -> . term9 MINUS term10
    (69) term9 -> . term10
    (70) term10 -> . term10 MULTIPLY term11
    (71) term10 -> . term10 DIVIDE term11
    (72) term10 -> . term10 MODULO term11
    (73) term10 -> . term11
    (74) term11 -> . MINUS term11
    (75) term11 -> . term12
    (76) term12 -> . PLUS term12
    (77) term12 -> . term13
    (78) term13 -> . primary
    (79) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (80) primary -> . arrayd
    (81) primary -> . arraya
    (82) primary -> . classvar
    (83) primary -> . literal
    (84) primary -> . varname
    (86) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (90) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (98) literal -> . NUMBER
    (99) literal -> . true
    (100) literal -> . false

    IDENTIFIER      shift and go to state 36
    nil             shift and go to state 54
    self            shift and go to state 50
    GLOBAL          shift and go to state 29
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    OPEN_BRACKET    shift and go to state 3
    Array           shift and go to state 57
    NUMBER          shift and go to state 48
    true            shift and go to state 40
    false           shift and go to state 47

    term7                          shift and go to state 12
    term6                          shift and go to state 13
    term5                          shift and go to state 14
    term4                          shift and go to state 31
    term3                          shift and go to state 16
    term2                          shift and go to state 17
    term1                          shift and go to state 18
    term0                          shift and go to state 19
    mlhs                           shift and go to state 1
    primary                        shift and go to state 30
    term9                          shift and go to state 20
    term8                          shift and go to state 21
    arg                            shift and go to state 22
    arrayal                        shift and go to state 32
    expr2                          shift and go to state 76
    literal                        shift and go to state 34
    call                           shift and go to state 35
    function                       shift and go to state 38
    mlhsitem                       shift and go to state 39
    variable                       shift and go to state 55
    varname                        shift and go to state 27
    classvar                       shift and go to state 7
    arraya                         shift and go to state 44
    arrayd                         shift and go to state 46
    term13                         shift and go to state 8
    term12                         shift and go to state 9
    term11                         shift and go to state 10
    term10                         shift and go to state 11

state 4

    (76) term12 -> PLUS . term12
    (76) term12 -> . PLUS term12
    (77) term12 -> . term13
    (78) term13 -> . primary
    (79) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (80) primary -> . arrayd
    (81) primary -> . arraya
    (82) primary -> . classvar
    (83) primary -> . literal
    (84) primary -> . varname
    (86) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (90) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (85) classvar -> . IDENTIFIER DOT IDENTIFIER
    (98) literal -> . NUMBER
    (99) literal -> . true
    (100) literal -> . false
    (136) varname -> . GLOBAL
    (137) varname -> . IDENTIFIER
    (117) variable -> . varname
    (118) variable -> . nil
    (119) variable -> . self

    PLUS            shift and go to state 4
    OPEN_BRACKET    shift and go to state 3
    Array           shift and go to state 57
    IDENTIFIER      shift and go to state 71
    NUMBER          shift and go to state 48
    true            shift and go to state 40
    false           shift and go to state 47
    GLOBAL          shift and go to state 29
    nil             shift and go to state 54
    self            shift and go to state 50

    varname                        shift and go to state 73
    classvar                       shift and go to state 74
    primary                        shift and go to state 30
    literal                        shift and go to state 34
    variable                       shift and go to state 72
    arraya                         shift and go to state 44
    term13                         shift and go to state 8
    term12                         shift and go to state 77
    arrayd                         shift and go to state 46

state 5

    (27) expr1 -> return . term2
    (28) expr1 -> return .
    (43) term2 -> . term3 INCL_RANGE term3
    (44) term2 -> . term3 EXCL_RANGE term3
    (45) term2 -> . term3
    (46) term3 -> . term3 LOGICAL_OR term4
    (47) term3 -> . term3 LOGICAL_AND term4
    (48) term3 -> . term4
    (49) term4 -> . term5 DOUBLE_EQUALS term5
    (50) term4 -> . term5 NOT_EQUALS term5
    (51) term4 -> . term5 EQUAL_TILDE term5
    (52) term4 -> . term5 COMPARISON term5
    (53) term4 -> . term5
    (54) term5 -> . term5 LESS term6
    (55) term5 -> . term5 LESS_EQUALS term6
    (56) term5 -> . term5 GREATER term6
    (57) term5 -> . term5 GREATER_EQUALS term6
    (58) term5 -> . term6
    (59) term6 -> . term6 BIT_XOR term7
    (60) term6 -> . term6 BIT_OR term7
    (61) term6 -> . term7
    (62) term7 -> . term7 BIT_AND term8
    (63) term7 -> . term8
    (64) term8 -> . term8 LEFT_SHIFT term9
    (65) term8 -> . term8 RIGHT_SHIFT term9
    (66) term8 -> . term9
    (67) term9 -> . term9 PLUS term10
    (68) term9 -> . term9 MINUS term10
    (69) term9 -> . term10
    (70) term10 -> . term10 MULTIPLY term11
    (71) term10 -> . term10 DIVIDE term11
    (72) term10 -> . term10 MODULO term11
    (73) term10 -> . term11
    (74) term11 -> . MINUS term11
    (75) term11 -> . term12
    (76) term12 -> . PLUS term12
    (77) term12 -> . term13
    (78) term13 -> . primary
    (79) primary -> . OPEN_BRACKET expr2 CLOSE_BRACKET
    (80) primary -> . arrayd
    (81) primary -> . arraya
    (82) primary -> . classvar
    (83) primary -> . literal
    (84) primary -> . varname
    (86) arrayd -> . Array OPEN_BRACKET array_size CLOSE_BRACKET
    (90) arraya -> . variable OPEN_SQUARE array_args CLOSE_SQUARE
    (85) classvar -> . IDENTIFIER DOT IDENTIFIER
    (98) literal -> . NUMBER
    (99) literal -> . true
    (100) literal -> . false
    (136) varname -> . GLOBAL
    (137) varname -> . IDENTIFIER
    (117) variable -> . varname
    (118) variable -> . nil
    (119) variable -> . self

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for OPEN_BRACKET resolved as shift
  ! shift/reduce conflict for Array resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for true resolved as shift
  ! shift/reduce conflict for false resolved as shift
  ! shift/reduce conflict for GLOBAL resolved as shift
  ! shift/reduce conflict for nil resolved as shift
  ! shift/reduce conflict for self resolved as shift
    SEMI_COLON      reduce using rule 28 (expr1 -> return .)
    NEWLINE         reduce using rule 28 (expr1 -> return .)
    end             reduce using rule 28 (expr1 -> return .)
    $end            reduce using rule 28 (expr1 -> return .)
    when            reduce using rule 28 (expr1 -> return .)
    else            reduce using rule 28 (expr1 -> return .)
    elsif           reduce using rule 28 (expr1 -> return .)
    then            reduce using rule 28 (expr1 -> return .)
    puts            reduce using rule 28 (expr1 -> return .)
    print           reduce using rule 28 (expr1 -> return .)
    gets            reduce using rule 28 (expr1 -> return .)
    break           reduce using rule 28 (expr1 -> return .)
    def             reduce using rule 28 (expr1 -> return .)
    class           reduce using rule 28 (expr1 -> return .)
    if              reduce using rule 28 (expr1 -> return .)
    while           reduce using rule 28 (expr1 -> return .)
    until           reduce using rule 28 (expr1 -> return .)
    case            reduce using rule 28 (expr1 -> return .)
    for             reduce using rule 28 (expr1 -> return .)
    return          reduce using rule 28 (expr1 -> return .)
    do              reduce using rule 28 (expr1 -> return .)
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    OPEN_BRACKET    shift and go to state 3
    Array           shift and go to state 57
    IDENTIFIER      shift and go to state 71
    NUMBER          shift and go to state 48
    true            shift and go to state 40
    false           shift and go to state 47
    GLOBAL          shift and go to state 29
    nil             shift and go to state 54
    self            shift and go to state 50
